# SPINN

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  Dockerfile  MakeFile  Makefile  README.md  run_model.py
analysis/: bump.py  decode.py
code/: clear_cache.sh  con_ff_utils.h  con_utils.h  conf.h  constants.h  cpu_usage.sh  gen_con.sh  gen_ksi.cpp  gen_ksi.sh  gen_mat.cpp  gen_mat.sh  globals.h  hyst_utils.h  lif_utils.h  loop_Ie_Je.sh  loop_Ie_Jee.sh  loop_J0_Jee.sh  loop_Jee.sh  loop_K.sh  loop_gain.sh  loop_ini.sh  loop_m0.sh  loop_phase.sh  loop_tau_f.sh  low_rank_utils.h  mat_utils.h  mean_field.h  mem_usage.sh  mrnv.cpp  net_utils.h  overlap_trials.sh  params.cfg  params_default.cfg  permutations.h  rmvnorm.cpp  run_dual.sh  run_off_on.sh  temp_11644_globals.h  temp_18707_globals.h
conf/: config.yml  config.yml.bak  config_EI.yml  config_EI.yml.bak  config_FF.yml  config_LR.yml  config_LR.yml.bak  config_ODR.yml  config_ODR.yml.bak  config_ODR_multi.org  config_ODR_multi.yml  config_search.yml  config_search.yml.bak  config_single.yml  config_single.yml.bak  config_spec.yml
new/: .#utils.hpp  ..gitignore.~undo-tree~  .CMakelists.txt.~undo-tree~  .DEPENDENCIES.md.~undo-tree~  .LICENSE.md.~undo-tree~  .MakeFile.~undo-tree~  .README.md.~undo-tree~  .gitignore  .run.py.~undo-tree~  CMakelists.txt~  DEPENDENCIES.md  DEPENDENCIES.md~  LICENSE.md  MakeFile~  README.md  config_EI.yml  const.hpp  fokker_planck.org  globals.cpp  globals.hpp  lif_network.cpp  lif_network.hpp  lif_stp.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix.org  network.cpp  network.hpp  rates.txt  (+11 more)
(+172 files in other folders)
